<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/compression_level">

        <AutoCompleteTextView
            android:id="@+id/compressLevelTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <com.google.android.material.checkbox.MaterialCheckBox
            android:text="@string/auto_sign"
            android:textSize="20sp"
            android:id="@+id/autosign"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:layout_gravity="end"
            android:id="@+id/sign_settings"
            android:text="@string/sign_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <ListView
        android:id="@+id/permList"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="8dp"
        android:choiceMode="multipleChoice" />
</LinearLayout>
